--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,10 @@ tqdm==4.66.5
 tensorboard==2.17.0
 tensorboard-data-server==0.7.2
 datasets==2.15.0
-torchaudio==2.4.0
-torchmetrics==1.4.1
-torchvision==0.19.0
-Flask==3.0.3
+plotly==5.24.0
+dash==2.18.0
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-mantine-components==0.12.1
+dash-table==5.0.0
+
